RESOLVED FIXED 42138
Fix typo in "close the cell" which caused assertion
https://bugs.webkit.org/show_bug.cgi?id=42138
Summary Fix typo in "close the cell" which caused assertion
Eric Seidel (no email)
Reported 2010-07-12 21:45:40 PDT
Fix typo in "close the cell" which caused assertion
Attachments
Patch (2.70 KB, patch)
2010-07-12 21:46 PDT, Eric Seidel (no email)
abarth: review+
commit-queue: commit-queue-
Eric Seidel (no email)
Comment 1 2010-07-12 21:46:26 PDT
Adam Barth
Comment 2 2010-07-12 22:53:43 PDT
Comment on attachment 61322 [details] Patch You've got to put the table in the table scope, apparently.
WebKit Commit Bot
Comment 3 2010-07-12 23:26:28 PDT
Comment on attachment 61322 [details] Patch Rejecting patch 61322 from commit-queue. Failed to run "['WebKitTools/Scripts/run-webkit-tests', '--no-launch-safari', '--exit-after-n-failures=1', '--ignore-tests', 'compositing', '--quiet']" exit_code: 1 Running build-dumprendertree Compiling Java tests make: Nothing to be done for `default'. Running tests from /Users/eseidel/Projects/CommitQueue/LayoutTests Testing 20653 test cases. html5lib/runner.html -> failed Exiting early after 1 failures. 15520 tests run. 279.46s total testing time 15519 test cases (99%) succeeded 1 test case (<1%) had incorrect layout 12 test cases (<1%) had stderr output Full output: http://webkit-commit-queue.appspot.com/results/3506203
Eric Seidel (no email)
Comment 4 2010-07-13 01:23:30 PDT
WebKit Review Bot
Comment 5 2010-07-13 01:42:31 PDT
http://trac.webkit.org/changeset/63183 might have broken GTK Linux 32-bit Release
Note You need to log in before you can comment on or make changes to this bug.