2010-07-12  Eric Seidel  <eric@webkit.org>

Reviewed by Adam Barth.

        Fix typo in "close the cell" which caused assertion
        https://bugs.webkit.org/show_bug.cgi?id=42138

        * html5lib/resources/tables01.dat:
2010-07-12  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        Fix typo in "close the cell" which caused assertion
        https://bugs.webkit.org/show_bug.cgi?id=42138

        * html/HTMLTreeBuilder.cpp:
        (WebCore::HTMLTreeBuilder::closeTheCell):

Canonical link: https://commits.webkit.org/54039@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@63183 268f45cc-cd09-0410-ab3c-d52691b4dbfc